<resources>

    <!-- GENERAL -->
    <string name="app_name">Peek</string>
    <string name="facebook_app_id">1403100456683343</string>
    <string name="content_file_provider_authority">com.peekapps.peek.fileprovider</string>
    <string name="mapbox_token">pk.eyJ1IjoidmJhc2giLCJhIjoiY2lpNXlvamU5MDA1dnY1bHh4OXZwOWM1ZCJ9.renUilD6tlXalAVSJOm8ug</string>
    <!-- Suffix after '-' must be the app package name as specified in the build.gradle file. This
         is used by the com.amazonaws.mobile.downloader.query.DownloadQueueProvider class. -->
    <string name="download_queue_provider_authority">com.amazonaws.mobile.downloader-com.peekapps.peek</string>

    <!--            APP STRINGS             -->

    <!-- * Welcome screen -->
    <string name="welcome">Welcome to Peek!</string>
    <string name="welcome_info">The app for students around the world.</string>
    <string name="welcome_start_prompt">Tap to get started!</string>

    <string name="tutorial_logo_transition">TutorialLogoTransition</string>

    <!-- Tutorial screen -->
    <string name="tutorial_text_1">Find out what is happening at your Uni and explore others around the world</string>
    <string name="tutorial_text_2">Snap a moment within the bounds of your Uni and share it with your peers</string>
    <string name="tutorial_text_3">Accumulate points through likes and help make a name for your Uni.</string>
    <string name="tutorial_text_4">Find out what is happening at your uni and explore others around the world</string>
    <string name="tutorial_done">Done</string>

    <!-- Login screen -->
    <string name="login">Login</string>
    <string name="login_guest">Login as guest</string>

    <!-- Select your university screen -->
    <string name="uni_select_prompt">Select your Uni</string>
    <string name="uni_select_loading">Loading nearby universities...</string>
    <string name="uni_select_loc_info">Based on your current location</string>
    <string name="uni_select_done">Done</string>
    <string name="uni_select_cant_find">Can\'t find your Uni?</string>

    <!-- **     Wait dialog -->

    <string name="top_info_wait">Waiting for location</string>
    <string name="top_info_done">Location ready</string>
    <string name="load_dialog_title">One moment</string>
    <string name="load_dialog_content">Fetching location data...</string>
    <string name="load_dialog_done">Done!</string>
    <string name="load_dialog_done_content">Wow!</string>

    <!-- **     Permission snackbar -->
    <string name="pager_perm_snackbar">
        Your permission is required to activate Peek\'s features.
    </string>
    <string name="pager_perm_action">GRANT</string>

    <!--        MAP FRAGMENT        -->


    <!--        CAMERA FRAGMENT     -->
    <string name="camera_publish_upload">Uploading to</string>
    <string name="camera_publish_change_loc">Change location</string>
    <string name="camera_publish_confirm">Confirm</string>

    <!-- FEED FRAGMENT -->

    <string-array name="feed_sort_options">
        <item>Popularity</item>
        <item>Last updated</item>
        <item>Distance from me</item>
    </string-array>

    <string name="feed_text">Live feed of media\n\n\n\nLive feed of media</string>


    <!-- UNI PROFILE -->

    <string name="uni_profile_name">University of Stirling</string>
    <string name="uni_profile_location">Stirling</string>

    <!-- SETTINGS -->
    <string name="action_settings">Settings</string>
    <string name="settings_switch_on">Light</string>
    <string name="settings_switch_off">Dark</string>
</resources>
